Refactored PoolAllocators and the array's methods

--- a/CustomContainer/CustomContainer.vcxproj
+++ b/CustomContainer/CustomContainer.vcxproj
@@ -40,13 +40,13 @@
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v143</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v143</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
@@ -140,17 +140,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="EntryPoint.cpp" />
     <ClCompile Include="PoolAllocator.cpp" />
     <ClCompile Include="StackAllocator.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Allocator.h" />
-    <ClInclude Include="FArray.h" />
-    <ClInclude Include="PoolAllocator.h" />
-    <ClInclude Include="StackAllocator.h" />
-    <ClInclude Include="StackLinkedList.h" />
-    <ClInclude Include="Utils.h" />
+    <ClInclude Include="Include\Allocator.h" />
+    <ClInclude Include="Include\FArray.h" />
+    <ClInclude Include="Include\PoolAllocator.h" />
+    <ClInclude Include="Include\StackAllocator.h" />
+    <ClInclude Include="Include\StackLinkedList.h" />
+    <ClInclude Include="Include\Utils.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
